Bug 352704, clear DOM storage when clearing cookies, r=mconnor,jst, sr=dveditz